name:
  hasql-cursor-transaction
version:
  0.7
category:
  Hasql, Database, PostgreSQL, Streaming
synopsis:
  An abstraction for simultaneous fetching from multiple PostgreSQL cursors
homepage:
  https://github.com/nikita-volkov/hasql-cursor-transaction 
bug-reports:
  https://github.com/nikita-volkov/hasql-cursor-transaction/issues 
author:
  Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:
  Nikita Volkov <nikita.y.volkov@mail.ru>
copyright:
  (c) 2016, Nikita Volkov
license:
  MIT
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  >=1.10


source-repository head
  type:
    git
  location:
    git://github.com/nikita-volkov/hasql-cursor-transaction.git


library
  hs-source-dirs:
    library
  ghc-options:
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  other-modules:
    Hasql.CursorTransaction.Private.Prelude
    Hasql.CursorTransaction.Private.Queries
    Hasql.CursorTransaction.Private.Specs
    Hasql.CursorTransaction.Private.Transactions
    Hasql.CursorTransaction.Private.CursorTransaction
  exposed-modules:
    Hasql.CursorTransaction.Transactions
    Hasql.CursorTransaction.Sessions
    Hasql.CursorTransaction
  build-depends:
    -- database:
    hasql,
    hasql-transaction,
    -- data:
    bytestring-tree-builder,
    bytestring,
    -- control:
    contravariant,
    contravariant-extras,
    transformers,
    -- general:
    base-prelude,
    base
